core/tests/safety/test_multi_root_vms_not_send.stderr
error[E0277]: `*mut c_void` cannot be sent between threads safely
  --> tests/safety/test_multi_root_vms_not_send.rs:33:24
   |
33 |       std::thread::spawn(move || {
   |       ------------------ ^------
   |       |                  |
   |  _____|__________________within this `{closure@$DIR/tests/safety/test_multi_root_vms_not_send.rs:33:24: 33:31}`
   | |     |
   | |     required by a bound introduced by this call
34 | |         // Should fail to build because UnSendRootVm is not supposed ...
35 | |         root.run_code::<()>(c"").unwrap();
36 | |     });
   | |_____^ `*mut c_void` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/safety/test_multi_root_vms_not_send.rs:33:24: 33:31}`, the trait `Send` is not implemented for `*mut c_void`
note: required because it appears within the type `bp3d_lua::ffi::lua::State`
  --> src/ffi/lua.rs
   |
   | pub struct State(*mut c_void);
   |            ^^^^^
note: required because it appears within the type `bp3d_lua::vm::Vm`
  --> src/vm/core/vm.rs
   |
   | pub struct Vm {
   |            ^^
note: required because it appears within the type `bp3d_lua::vm::core::root_vm::common::UnsafeRootVm`
  --> src/vm/core/root_vm/common.rs
   |
   | pub struct UnsafeRootVm(pub Vm);
   |            ^^^^^^^^^^^^
note: required because it appears within the type `bp3d_lua::vm::core::root_vm::unsend::RootVm`
  --> src/vm/core/root_vm/unsend.rs
   |
   | pub struct RootVm {
   |            ^^^^^^
note: required because it's used within this closure
  --> tests/safety/test_multi_root_vms_not_send.rs:33:24
   |
33 |     std::thread::spawn(move || {
   |                        ^^^^^^^
note: required by a bound in `spawn`
  --> $RUST/std/src/thread/functions.rs
   |
   | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
   |        ----- required by a bound in this function
...
   |     F: Send + 'static,
   |        ^^^^ required by this bound in `spawn`
